# sml_lab26_geometric_regression

./: .gitignore  CLAUDE.md  COLAB_SETUP.md  CONTRACT.md  INTEGRATION_LOG.md  NOTEBOOK_STYLE_GUIDE.md  README.md  SPEC.md  TEST_REPORT.md  pyproject.toml
.github/workflows/: pages.yml
lecture_notes/: lecture_notes.tex  lecture_notes_v2.tex  lecture_notes_v3.tex
lecture_notes/debate/: round1_summary.md  round2_examples.tex  round2_figures.tex  round2_math.tex  round2_prologue.tex  round2_summary.md  round3_devils_advocate.md  round3_pedagogy.tex  round3_prologue.tex  round3_summary.md  round3_verification.tex  round4_ending.tex  (+6 more)
notebooks/: 00_python_for_this_course.ipynb  01_where_do_coefficients_come_from.ipynb  02_the_right_angle.ipynb  03_pythagoras_runs_a_regression.ipynb  04_peeling_apart_the_variables.ipynb  05_who_controls_the_shadow.ipynb  06_when_the_geometry_lies.ipynb  07_constraining_the_shadow.ipynb  08_testing_with_geometry.ipynb  09_reading_the_instruments.ipynb  10_what_the_geometry_cannot_see.ipynb
regression_geometry/: __init__.py  cheatsheet.py  colors.py  core.py  data.py  exercises.py  interactive.py  plots.py  scoreboard.py
regression_geometry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
visualizations/: 01_closest_point.html  02_point_plane_shadow.html  03_shadow_of_shadow.html  04_sst_ssr_sse.html  05_sweeping_theta.html  06_fwl_two_step.html  07_shrinking_residualised.html  08_leverage_influence.html  09_pancake_column_space.html  10_ridge_vs_lasso.html  11_f_test_projection.html  12_confidence_ellipse.html  index.html
(+7 files in other folders)
