[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "regression-geometry"
version = "0.1.0"
description = "Regression from the Inside: Seeing the Geometry of Linear Models"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "plotly>=5.15",
    "ipywidgets>=8.0",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "scipy>=1.11",
]

[tool.setuptools.packages.find]
include = ["regression_geometry*"]

[tool.setuptools.package-data]
regression_geometry = ["data/*.csv"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "jupyter>=1.0",
    "nbformat>=5.0",
]
